--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -215,3 +215,28 @@ ul {
   text-align: left;
   font-size: 19px;
 }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@media (max-width:700px) {
+
+  .form {
+    width: 90%;
+  }
+
+  .heading h1 {
+    font-size: 2rem;
+  }
+
+  .heading p {
+    font-size: 1.5rem;
+  }
+
+}
